<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.minerva.ui.details.DetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/primary_color"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/app_name">

            <ImageView
                android:id="@+id/details_header_imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/news_details_header"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_details_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingEnd="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="title_fake_details itle_fake_details " />

            <TextView
                android:id="@+id/source_details_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="18dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_details_textView"
                tools:text="Source" />

            <TextView
                android:id="@+id/date_details_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/source_details_textView"
                app:layout_constraintStart_toStartOf="@+id/source_details_textView"
                app:layout_constraintTop_toBottomOf="@id/source_details_textView"
                tools:text="12-3-2020" />

            <ImageView
                android:id="@+id/addFavouriteDetailsImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@+id/date_details_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/source_details_textView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/openSource_details_imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_open_soucre"
                android:drawableStart="@drawable/web"
                android:drawablePadding="12dp"
                android:layout_marginTop="18dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/open"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/date_details_textView"
                app:layout_constraintEnd_toEndOf="@+id/title_details_textView"
                app:layout_constraintStart_toEndOf="@+id/source_details_textView"
                app:layout_constraintTop_toTopOf="@+id/source_details_textView" />


            <TextView
                android:id="@+id/description_details_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="8sp"
                android:padding="16dp"
                android:text="@string/fakeFontent"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/date_details_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>